<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLight"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/login_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/login_password"
        android:background="@color/colorBackground"
        android:hint="@string/username"
        android:padding="8dp" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:background="@color/colorBackground"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="8dp" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_custom"
        android:text="@string/submit"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_below="@id/button_login"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_custom"
        android:paddingHorizontal="8dp"
        android:text="@string/register_new_account"
        android:textAllCaps="false" />

</RelativeLayout>