<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorStandard"
    android:orientation="horizontal"
    android:padding="16dp"
    android:weightSum="4">

    <TextView
        android:id="@+id/profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/profile_information"
        android:textColor="@color/colorDark"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/profile_column1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/profile_title"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:padding="6dp"
            android:text="@string/name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/email"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:padding="6dp"
            android:text="@string/dob"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/work"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_column2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@id/profile_column1"
        android:layout_toRightOf="@id/profile_column1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:padding="6dp"
            android:textColor="@color/colorDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:textColor="@color/colorDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/profile_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:padding="6dp"
            android:textColor="@color/colorDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/profile_work"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:textColor="@color/colorDark"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>